correction z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,7 +501,7 @@
     background-color: #DF8CF8;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 99;
 }
 
 .dropdown-content a {
